# Grade9_Physics_experimenter_helper_using-deep-agents

./: README.md
physics-experiment-helper/: .env.example  .gitignore  README.md  architecture_diagram.txt  medium_article.md  pyproject.toml  requirements.txt  run.py  test_image_generation.py  visual_architecture.txt
physics-experiment-helper/src/agent/: __init__.py  physics_agent.py  prompts.py
physics-experiment-helper/src/api/: __init__.py  export_utils.py  image_generation.py  main.py
physics-experiment-helper/static/: index.html
